# cloud-sql-python-connector

./: .env  .flake8  .gitignore  .mypy.ini  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  \  auth.enc  build.sh  connector.py  local.py  main.py  new_docker.sh  noxfile.py  private.cloudbuild.yaml  pyproject.toml  refresh.py  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test.py  utils.py
.ci/: cloudbuild.yaml
.cl/: cloudbuild.yaml
.github/: bluderbuss.yml  blunderbuss.yml  header-checker-lint.yml  labels.yml  release-please.yml  release-trigger.yml  renovate.json  renovate.json5  trusted-contribution.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yaml  bug_report.yaml  documentation-issue.md  documentation-issue.yaml  feature-request.md  feature-request.yaml  feature_request.yaml  question.md  question.yaml
.github/workflows/: cloud_build_failure_reporter.yml  codeql.yml  coverage.yml  labels.yaml  lint.yml  release-please.yml  schedule_reporter.yml  scorecard.yml  tests.yml
.kokoro/: populate-secrets.sh  release.sh  requirements.in  requirements.txt  trampoline.sh  trampoline_v2.sh
.kokoro/lint/: common.cfg
.kokoro/python3.10/linux/: common.cfg
.kokoro/python3.6/linux/: common.cfg
.kokoro/python3.7/linux/: common.cfg  periodic.cfg
.kokoro/python3.7/windows/: common.cfg  presubmit.cfg
.kokoro/python3.8/linux/: common.cfg
.kokoro/python3.9/linux/: common.cfg
.kokoro/release/: common.cfg  release.cfg
.kokoro/tests/: run_tests.bat  run_tests.sh  run_tests_windows.sh
google/: __init__.py
google/api/: field_behavior_pb2.py
google/cloud/: __init__.py
google/cloud/sql/: utils.py
google/cloud/sql/connector/: InstanceConnectionManager.py  __init__.py  aiomysql.py  asyncpg.py  (+24 more)
samples/cloudrun/: README.md
samples/cloudrun/cloudrun/: README.md
samples/cloudrun/mysql/: main.py
samples/cloudrun/postgres/: Dockerfile  main.py  requirements.txt
samples/cloudrun/sqlserver/: Dockerfile  main.py
samples/notebooks/: mysql_python_connector.ipynb  postgres_python_connector.ipynb  sqlserver_python_connector.ipynb
tests/: conftest.py  pytest.ini  test.py  test_instanceconnectionmanager_unit.py  test_unit.py  test_utils_unit.py  test_zones.toml
tests/system/: conftest.py  test_asyncpg_connection.py  test_asyncpg_iam_auth.py  test_connector.py  test_connector_object.py  test_ip_types.py  test_pg8000_connection.py  test_pg8000_gevent.py  test_pg8000_iam_auth.py  test_psycopg_connection.py  test_pymysql_connection.py  test_pymysql_iam_auth.py  test_pytds_connection.py
tests/unit/: conftest.py  mocks.py  test_aiomysql.py  test_asyncpg.py  test_client.py  test_connection_name.py  test_connector.py  test_ephemeral.py  test_instance.py  test_instance_connection_manager.py  test_instanceconnectionmanager.py  test_lazy.py  test_local_unix_socket.py  test_metadata.py  test_monitored_cache.py  test_packaging.py  test_pg8000.py  test_proxy.py  test_psycopg.py  test_pymysql.py  test_pytds.py  test_rate_limiter.py  test_refresh_utils.py  test_resolver.py  test_utils.py
(+7 files in other folders)
