# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
description = "Google Cloud SQL Python Connector library"
name = "cloud-sql-python-connector"
authors = [{ name = "Google LLC", email = "googleapis-packages@google.com" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    # Should be one of:
    # "Development Status :: 3 - Alpha"
    # "Development Status :: 4 - Beta"
    # "Development Status :: 5 - Production/Stable"
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiofiles",
    "aiohttp",
    "cryptography>=42.0.0",
    "dnspython>=2.0.0",
    "Requests",
    "google-auth>=2.28.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/GoogleCloudPlatform/cloud-sql-python-connector"
Repository = "https://github.com/GoogleCloudPlatform/cloud-sql-python-connector.git"
Issues = "https://github.com/GoogleCloudPlatform/cloud-sql-python-connector/issues"
Changelog = "https://github.com/GoogleCloudPlatform/cloud-sql-python-connector/blob/main/CHANGELOG.md"

[project.optional-dependencies]
pymysql = ["PyMySQL>=1.1.0"]
pg8000 = ["pg8000>=1.31.1"]
pytds = ["python-tds>=1.15.0"]
asyncpg = ["asyncpg>=0.30.0"]

[tool.setuptools.dynamic]
version = { attr = "google.cloud.sql.connector.version.__version__" }

[tool.setuptools.package-data]
"google.cloud.sql.connector" = ["py.typed"]

[tool.setuptools.packages.find]
# Only include packages under the 'google' namespace. Do not include tests,
# benchmarks, etc.
include = ["google*"]

[tool.mypy]
python_version = "3.9"
namespace_packages = true
ignore_missing_imports = true
warn_unused_configs = true
exclude = ['docs/*', 'samples/*']

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
order-by-type = false
single-line-exclusions = ["typing"]

[tool.ruff.format]
quote-style = "double"
